reports/debug-results/cross-chat_memory_test_20250624_092629.txt
Debug Tool Report: Cross-Chat Memory Test
Timestamp: 2025-06-24T09:28:31.640424
Tool Path: debug/archived/demo-test/debug-tools/test_memory_cross_chat.py
Description: Cross-session memory testing (needs OpenWebUI + backend)
Requirements: backend, openwebui
Status: FAILED
================================================================================

STDERR:
----------------------------------------
  File "E:\Projects\opt\backend\debug\archived\demo-test\debug-tools\test_memory_cross_chat.py", line 69
    if not key_manager:
                       ^
IndentationError: unindent does not match any outer indentation level


